# os_lab2

./: CMakeLists.txt  README.md
include/: generate_str.h  os.h  search.h  thread_data.h
src/: generate_str.cpp  main.cpp  os_linux.cpp  search.cpp
